--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <a href="file:///G:/AMGOI/web%20development/food%20delivery/MD%20Foods/index.html"></a>
+    <a href="https://mullakajol8888.github.io/mdfoods.github.io/"></a>
     <link rel="stylesheet" href="css/payment.css">
     <title>Payment</title>
 </head>
